--- a/object.html
+++ b/object.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    <!--2.    Create an object representing a book with properties like title, author, and year published.
+-->
+    <script>
+        const book= {
+            title: "hary pater",
+            author: "j.k rawling",
+            year: 2000 
+        }
+        console.log(`title= ${book.title} , author= ${book.author} and year= ${book.year}`);
+    </script>
+</body>
+</html>
